# jump-cannon

./: .env.example  .envrc  .gitignore  .gitmodules  404.html  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  RUST_NIX_IMPL.md  Taskfile.yaml  Trunk.toml  app.vue  city.toml  docker-compose.yml  flake.nix  hydra-project.json  index.html  insert.txt  justfile  native_correct.txt  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  todo.md  tsconfig.json
app/: Cargo.toml  Trunk.toml
app/panel-kit/: Cargo.toml
app/panel-kit/assets/: panel-kit.css
app/panel-kit/src/: lib.rs
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/tvix-worker/: Cargo.toml
app/tvix-worker/src/: main.rs
app/ui/: Cargo.toml  Dioxus.toml  Trunk.toml  build.rs  index.html
app/ui/assets/: app.css
app/ui/src/: anchored.rs  api.rs  appstate.rs  badges.rs  graph_canvas.rs  main.rs  palette.rs  proto.rs  worker.rs
app/ui/src/panels/: camera.rs  debug.rs  document.rs  filter.rs  filter_strip.rs  generate.rs  inspector.rs  instances.rs  layout.rs  metrics.rs  mod.rs  nodes.rs  style.rs  timeline.rs
app/ui/src/proto/: jumpcannon.graph.rs
app/ui/src/render/: camera.rs  data.rs  mod.rs  pipelines.rs
crates/graph-api/: Cargo.toml  build.rs
crates/graph-api/proto/: graph.proto
crates/graph-api/src/: attribute_resolver.rs  binary.rs  browser.rs  compute_broker.rs  lib.rs  main.rs  progress.rs  proto.rs  server.rs  state.rs  subprocess.rs  vault_loader.rs  watcher.rs
crates/graph-api/tests/: compute_broker.rs  regressions.rs
crates/graph-compute/: Cargo.toml  build.rs
crates/graph-compute/examples/: bench_pagerank.rs  bench_scaling.rs  bench_spmv.rs  gpu_probe.rs  probe.rs
crates/graph-compute/proto/: compute.proto
crates/graph-compute/src/: bsp.rs  lib.rs  main.rs  partition.rs  service.rs  sim.rs  stability.rs  wgpu_sim.rs
crates/graph-compute/src/analytics/: bfs.rs  connected_components.rs  distributed.rs  mod.rs  pagerank.rs  spmv.rs
crates/graph-compute/src/engines/: cpu_spring.rs  fa2_bh.rs  fa2_brute.rs  fa2_speed.rs  geometric.rs  geometric_bonding_gpu.rs  geometric_gpu.rs  mod.rs  multilevel.rs  sgd_stress.rs  sgd_stress_gpu.rs
crates/graph-compute/src/shaders/: bfs.wgsl  connected_components.wgsl  fa2_barnes_hut.wgsl  force_atlas2.wgsl  geometric_barnes_hut.wgsl  geometric_bonding.wgsl  pagerank.wgsl  sgd_stress.wgsl  spmv.wgsl  spmv_f16.wgsl  spmv_hybrid.wgsl
crates/graph-compute/src/topo_fisheye/: distort.rs  hybrid.rs  mod.rs  types.rs
crates/graph-compute/tests/: bsp_loop_grpc.rs  canary.rs  exchange_halo_grpc.rs  fuzz.proptest-regressions  fuzz.rs  geometric_scale.rs  geometric_solver.rs  gpu_bfs.rs  gpu_connected_components.rs  gpu_distributed.rs  gpu_distributed_pagerank.rs  gpu_e2e_tvix_stream.rs  gpu_engines.rs  gpu_pagerank_cross_oracle.rs  gpu_pagerank_nix_fixtures.rs  gpu_pagerank_proptest.rs  gpu_pagerank_scale.rs  gpu_spmv.rs  gpu_spmv_hybrid.rs  grpc_stream.rs  layout_stability.rs  list_engines_grpc.rs  multilevel_cascade.rs  solved_layouts.rs  topo_fisheye_grpc.rs
crates/graph-compute/tests/common/: mod.rs
crates/graph-compute/tests/golden/: geometric_grid5x5.json
crates/graph-layouts/: Cargo.toml  README.md
crates/graph-layouts/examples/: bench_static_layouts.rs
crates/graph-layouts/mock-graph-generator/: Cargo.toml
crates/graph-layouts/src/: geometric.rs  lib.rs  metrics.rs  types.rs  utils.rs
crates/graph-layouts/src/benchmark/: mod.rs
crates/graph-layouts/src/layout/: coarsen.rs  layout_trait.rs  mod.rs  topo_fisheye.rs  traits.rs
crates/graph-layouts/tests/: fuzz.rs  integration_basic.rs  regression.rs
crates/graph-metrics/: Cargo.toml
crates/graph-metrics/src/: betweenness.rs  degree.rs  edge_strength.rs  kcore.rs  lib.rs  louvain.rs  pagerank.rs  tests.rs  wcc.rs
crates/graph-renderer/: Cargo.toml  README.md  build.rs  build_wasm.sh  index.html  todos.md
crates/graph-renderer/.cargo/: config.toml
crates/graph-renderer/.clinerules/workflows/: architecture.md
crates/graph-renderer/assets/: index.html  main.js  style.css
crates/graph-renderer/assets/proto/: graph.proto
crates/graph-renderer/configs/: default.yaml  lavender.yaml  membrane-chains.yaml  membrane-sheet.yaml  membrane-tube.yaml  membrane-vesicle.yaml  showcase-gpu.yaml
crates/graph-renderer/examples/: text2d.rs
crates/graph-renderer/src/: app.rs  camera.rs  config.rs  data.rs  fetch.rs  fetch.rs.tmp  generate.rs  graph_callback.rs  graph_pipelines.rs  input.rs  job.rs  lib.rs  main.rs  native.rs  perf.rs  proto.rs  renderer.rs  timeline.rs  web.rs  worker.rs
crates/graph-renderer/src/components/: camera.rs  edge.rs  mod.rs  node.rs  title.rs
crates/graph-renderer/src/setup/: graph.rs  mod.rs
crates/graph-renderer/src/shaders/: edge.wgsl  node.wgsl
crates/graph-renderer/src/systems/: camera_controls.rs  graph_rendering.rs  mod.rs  ui_systems.rs
crates/graph-renderer/src/ui/: actions.rs  anchored.rs  badge.rs  command_palette.rs  document_viewer.rs  (+28 more)
crates/graph-renderer/tests/: regressions.rs
crates/graph-ui/: Cargo.toml
crates/graph-ui/src/: lib.rs  main.rs  vault.rs
crates/graph-ui/tests/: e2e_app.rs  query_integration.rs  vault_resource.rs
crates/jump-io/: Cargo.toml
crates/jump-io/src/: action.rs  adapter.rs  binding.rs  event.rs  lib.rs  raw.rs  sensitivity.rs  trigger.rs
crates/test-browser/: Cargo.toml  README.md
crates/test-browser/src/: main.rs
crates/tvix-loader/: Cargo.toml
crates/tvix-loader/src/: lib.rs
crates/tvix-wasm/: Cargo.toml
crates/tvix-wasm/src/: lib.rs
crates/tvix-wasm/tests/: integration_basic.rs
crates/vault-links/: Cargo.toml
crates/vault-links/src/: extractor.rs  lib.rs  loader.rs  parser.rs  tests.rs  walker.rs
crates/vault-links/tests/: integration_extract.rs
crates/vault-search/: Cargo.toml  README.md  default.nix
crates/vault-search/src/: error.rs  index.rs  main.rs  server.rs  walker.rs
crates/vault-search/tests/: integration.rs  integration_basic.rs
(+218 files in other folders)
