[workspace]
resolver = "2"
members = [
    "crates/graph-layouts",
    "crates/graph-metrics",
    "crates/graph-renderer",
    "crates/graph-api",
    "crates/graph-compute",
    "crates/vault-data",
    "crates/vault-links",
    "crates/vault-search",
    "crates/tvix-wasm",
    "crates/tvix-worker",
    "crates/test-browser",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.metadata.crane]
name = "jump-cannon"

[workspace.dependencies]
# Shared versions — crates reference these with `workspace = true`
bevy       = { version = "0.16", default-features = false }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
wasm-bindgen = "0.2"
rand       = "0.8"
indexmap   = { version = "2", features = ["serde"] }
petgraph   = { version = "0.6", features = ["serde-1"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
