# Cargo workspace for the Dioxus + Tauri full-stack app:
#   panel-kit  — generic, app-agnostic panel/dock workspace library (shared
#                with apple-notes-ocr-flow; designed to be consumed as a git
#                dependency from other repos)
#   ui         — jump-cannon's Dioxus frontend (talks HTTP to graph-api)
#   src-tauri  — Tauri v2 shell (pure webview container, no IPC commands)
#
# Deliberately a *separate* workspace from the repo root: the main workspace
# builds through nix + crane and must not absorb the Tauri/Dioxus dependency
# tree.
[workspace]
members = ["panel-kit", "ui", "src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dioxus = { version = "0.6", features = ["web"] }
gloo-storage = "0.3"
web-sys = "0.3"
wasm-bindgen = "0.2"
