# Cargo workspace for the Dioxus + Tauri full-stack app:
#   ui          — jump-cannon's Dioxus frontend (talks HTTP to graph-api)
#   src-tauri   — Tauri v2 shell (pure webview container, no IPC commands)
#   tvix-worker — Web Worker bin: tvix graph eval off the UI thread (the
#                 Generate panel's LocalWorker executor; trunk builds it as a
#                 separate worker bundle via app/ui/index.html)
#
# The panel-workspace library lives in its own repo now —
# https://github.com/ocasazza/panel-kit — consumed as a git dependency and
# shared with apple-notes-ocr-flow. Develop against a local checkout with:
#   [patch."https://github.com/ocasazza/panel-kit"]
#   panel-kit = { path = "../../panel-kit" }
#
# Deliberately a *separate* workspace from the repo root: the main workspace
# builds through nix + crane and must not absorb the Tauri/Dioxus dependency
# tree.
[workspace]
members = ["ui", "src-tauri", "tvix-worker"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dioxus = { version = "0.6", features = ["web"] }
gloo-storage = "0.3"
web-sys = "0.3"
# Pinned to the wasm-bindgen-cli version nixpkgs ships, so the crane/trunk
# nix build (`nix build .#app-web`) and host builds produce identical output.
wasm-bindgen = "=0.2.118"
# wgpu graph renderer (ported from crates/graph-renderer). Versions match
# graph-renderer's Cargo.toml exactly so the WGSL pipelines + GpuForceLayout
# compute path behave identically across both frontends.
# `fragile-send-sync-non-atomic-wasm` makes wgpu handles Send+Sync on
# single-threaded wasm — graph-layouts' `PhysicsLayout: Send + Sync` bound
# requires it. The egui app gets the same feature implicitly through
# egui-wgpu's defaults, so this matches its effective configuration.
wgpu = { version = "23", default-features = false, features = ["webgpu", "wgsl", "fragile-send-sync-non-atomic-wasm"] }
glam = "0.29"
bytemuck = { version = "1", features = ["derive"] }
