[package]
name = "panel-kit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Generic Dioxus panel-workspace library: floating/tiling panels, traffic lights, drag/resize, minimize-to-dock, layout persistence"

[dependencies]
dioxus = { workspace = true }
serde = { workspace = true }
gloo-storage = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = ["Window", "Document", "Element", "Event", "EventTarget"] }
