[package]
name = "jump-cannon-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Dioxus 0.6 — all-Rust UI, compiled to WASM and rendered in Tauri's webview.
dioxus = { workspace = true }
panel-kit = { path = "../panel-kit" }
serde = { workspace = true }
serde_json = { workspace = true }
# WASM-side HTTP to graph-api (the frontend always runs in a webview).
gloo-net = { version = "0.6", features = ["http"] }
gloo-storage = { workspace = true }   # persist the server URL + layout between sessions
gloo-timers = { version = "0.3", features = ["futures"] }  # pollers + redraw ticker
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
# graph-api's structured endpoints speak protobuf. The prost-generated types
# are checked in under src/proto/ (see src/proto.rs) — regen: `just app-proto`.
prost = "0.13"
urlencoding = "2"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
# wgpu renderer (ported from crates/graph-renderer): node/edge WGSL pipelines,
# 6DoF camera, in-process GPU force layout bound to the shared positions buffer.
wgpu = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
js-sys = "0.3"
# The GPU force-sim compute layout (same crate the egui renderer drives).
# Reaches outside app/ deliberately — the nix appSrc fileset includes
# crates/graph-layouts for exactly this dependency.
graph-layouts = { path = "../../crates/graph-layouts" }
web-sys = { workspace = true, features = [
    "Window", "Document", "Element", "Event", "EventTarget",
    "HtmlCanvasElement",
] }
tracing = "0.1"
tracing-wasm = "0.2"
