[package]
name = "jump-cannon-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Dioxus 0.6 — all-Rust UI, compiled to WASM and rendered in Tauri's webview.
dioxus = { workspace = true }
# Shared panel-workspace library (also consumed by apple-notes-ocr-flow).
# Develop against a local checkout via [patch] in the workspace Cargo.toml.
panel-kit = { git = "https://github.com/ocasazza/panel-kit" }
serde = { workspace = true }
serde_json = { workspace = true }
# WASM-side HTTP to graph-api (the frontend always runs in a webview).
# "websocket" feeds the Layout panel's remote-engine bridges
# (/graph/layout/stream consumers) — same feature pair graph-renderer enables.
gloo-net = { version = "0.6", features = ["http", "websocket"] }
# StreamExt for the layout-stream WebSocket consumers. Version + feature
# trim match graph-renderer's Cargo.toml (no executor side on wasm).
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
gloo-storage = { workspace = true }   # persist the server URL + layout between sessions
gloo-timers = { version = "0.3", features = ["futures"] }  # pollers + redraw ticker
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
# graph-api's structured endpoints speak protobuf. The prost-generated types
# are checked in under src/proto/ (see src/proto.rs) — regen: `just app-proto`.
prost = "0.13"
urlencoding = "2"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
# wgpu renderer (ported from crates/graph-renderer): node/edge WGSL pipelines,
# 6DoF camera, in-process GPU force layout bound to the shared positions buffer.
wgpu = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
js-sys = "0.3"
# The GPU force-sim compute layout (same crate the egui renderer drives).
# Reaches outside app/ deliberately — the nix appSrc fileset includes
# crates/graph-layouts for exactly this dependency.
graph-layouts = { path = "../../crates/graph-layouts" }
web-sys = { workspace = true, features = [
    "Window", "Document", "Element", "Event", "EventTarget",
    "HtmlCanvasElement",
    # panic banner (main.rs panic hook): console.error + DOM injection
    "console", "HtmlElement", "Node",
] }
tracing = "0.1"
tracing-wasm = "0.2"
# AppState round-trip (phase 4): YAML import/export in the Instances panel
# (serde_yml is the maintained fork of the archived serde_yaml) and the
# share-link codec (JSON → DEFLATE → base64url) — same crates the egui
# app used. Both pure-Rust, wasm32-clean.
serde_yml = "0.0.12"
base64 = "0.22"
miniz_oxide = "0.8"
# Client-side Nix evaluation (phase 4): the Layout panel's custom seed
# expressions and the Generate panel's Inline executor. One-way edge —
# tvix-wasm never depends on app code. Same path dep the egui app carried;
# the nix appSrc fileset must include crates/tvix-wasm for this.
tvix-wasm = { path = "../../crates/tvix-wasm" }
