[package]
name = "graph-api"
version = "0.1.0"
edition = "2021"
description = "axum HTTP API: serves the graph-renderer asset bundle plus protobuf + binary endpoints for the vault graph."

[[bin]]
name = "graph-api"
path = "src/main.rs"

[lib]
name = "graph_api"
path = "src/lib.rs"

[dependencies]
axum               = "0.7"
tokio              = { workspace = true }
tower              = "0.4"
tower-http         = { version = "0.5", features = ["fs", "trace"] }
serde              = { workspace = true }
serde_json         = { workspace = true }
bytes              = "1"
prost              = "0.13"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
open               = "5"
clap               = { version = "4", features = ["derive", "env"] }
dotenvy            = "0.15"
reqwest            = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding        = "2"

vault-data     = { path = "../vault-data" }
vault-links    = { path = "../vault-links" }
graph-metrics  = { path = "../graph-metrics" }
graph-renderer = { path = "../graph-renderer" }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
# `tower` is already a runtime dep at 0.4, but the integration tests
# below need `ServiceExt::oneshot` which lives behind the `util`
# feature. Spelling the dep out explicitly here keeps the runtime
# binary's feature footprint unchanged while making the test compile.
tower = { version = "0.4", features = ["util"] }
