[package]
name = "graph-api"
version = "0.1.0"
edition = "2021"
description = "axum HTTP API: serves the graph-renderer asset bundle plus protobuf + binary endpoints for the vault graph."

[[bin]]
name = "graph-api"
path = "src/main.rs"

[lib]
name = "graph_api"
path = "src/lib.rs"

[dependencies]
axum               = { version = "0.7", features = ["ws"] }
tokio              = { workspace = true }
tokio-stream       = "0.1"
tower              = "0.4"
tower-http         = { version = "0.5", features = ["fs", "trace"] }
serde              = { workspace = true }
serde_json         = { workspace = true }
bytes              = "1"
bytemuck           = { version = "1", features = ["derive"] }
prost              = "0.13"
tonic              = "0.12"
anyhow             = "1"
futures            = "0.3"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
open               = "5"
clap               = { version = "4", features = ["derive", "env"] }
dotenvy            = "0.15"
reqwest            = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding        = "2"
arc-swap           = "1"
notify             = "6"
notify-debouncer-mini = "0.4"

vault-data     = { path = "../vault-data" }
vault-links    = { path = "../vault-links" }
graph-layouts  = { path = "../graph-layouts" }
graph-metrics  = { path = "../graph-metrics" }
graph-renderer = { path = "../graph-renderer" }
# tvix-wasm is native+wasm; default-features=false builds the native (pure)
# tvix-eval evaluator. graph-api links it to evaluate Nix generate-expressions
# SERVER-SIDE (POST /generate), so the WASM client's `eval_graph` runs off the
# browser thread entirely (async HTTP, non-freezing).
tvix-wasm      = { path = "../tvix-wasm", default-features = false }
# graph-compute is native-only. graph-api links it for its gRPC client types
# + generated proto bindings; the renderer (WASM) does not.
graph-compute  = { path = "../graph-compute", default-features = false }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
# `tower` is already a runtime dep at 0.4, but the integration tests
# below need `ServiceExt::oneshot` which lives behind the `util`
# feature. Spelling the dep out explicitly here keeps the runtime
# binary's feature footprint unchanged while making the test compile.
tower = { version = "0.4", features = ["util"] }
