[package]
name = "graph-compute"
version = "0.1.0"
edition = "2021"
description = "Single-GPU wgpu force-simulation worker. Exposes a tonic gRPC Subscribe stream of PositionDelta frames. Native-only (never compiles to wasm)."

# Native-only crate — never targeted at wasm32. The renderer's WASM build excludes
# this from its dependency graph by simply not depending on it.

[[bin]]
name = "graph-compute"
path = "src/main.rs"

# One-shot PageRank over a CSR file — the GPU analytics entrypoint the lavender
# notebooks shell out to (replacing the cuGraph diagnostic). Uses the wgpu
# kernel when an adapter is present, else the CPU reference.
[[bin]]
name = "graph-pagerank"
path = "src/bin/pagerank.rs"

[lib]
name = "graph_compute"
path = "src/lib.rs"

[dependencies]
tonic              = "0.12"
prost              = "0.13"
# Well-known types (google.protobuf.Struct/Value/ListValue) referenced by
# SubscribeRequest.params. tonic-build/prost emit `::prost_types::Struct`
# for these by default (compile_well_known_types is off), so the generated
# code links against this crate rather than re-deriving the WKTs.
prost-types        = "0.13"
tokio              = { workspace = true }
tokio-stream       = { version = "0.1", features = ["sync"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytemuck           = { version = "1", features = ["derive"] }
# Half-precision (f16) packing for the SHADER_F16 SpMV storage variant. The
# `bytemuck` feature makes `half::f16` Pod so it casts straight into a wgpu
# buffer.
half               = { version = "2", default-features = false, features = ["bytemuck"] }
anyhow             = "1"
async-stream       = "0.3"
futures-core       = "0.3"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"

# 2-D Delaunay triangulation. Used directly by `topo_fisheye::distort` for
# the RNG-approximation density estimate. The §4 coarsening / hierarchy
# logic itself lives in `graph-layouts` (the canonical home for layout
# algorithms) — see the `graph-layouts` dep below.
delaunator         = "1.0"

# Canonical home of the topological-fisheye §4 coarsening + hierarchy
# (`graph_layouts::layout::topo_fisheye`). graph-compute imports the
# algorithm from here so the §5 hybrid + §6 distortion stages and the
# `GpuForceOptions::seed_mode = TopoFisheye` seeder share one source of
# truth. Native-only path: graph-layouts is cdylib+rlib; we link the rlib.
graph-layouts      = { path = "../graph-layouts" }

# Server-side wgpu force-sim. Native-only crate, so we let wgpu pick the default
# backend set (vulkan/metal/dx12); no webgpu/webgl features needed.
wgpu     = { version = "23", features = ["wgsl"] }
pollster = "0.4"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = "0.12"
serde_json = "1.0"
bytemuck = { version = "1", features = ["derive"] }
# In-process gRPC transport for the ExchangeHalo round-trip test: a tokio
# DuplexStream wrapped in hyper-util's TokioIo, connected via a tower
# service_fn connector (the standard tonic in-memory pattern — no TCP socket).
hyper-util = { version = "0.1", features = ["tokio"] }
tower = "0.5"
# CPU PageRank reference for the cross-oracle test (`gpu_pagerank` vs the
# implementation the lavender notebooks used). No dependency cycle: neither
# vault-data nor graph-metrics depends on graph-compute.
vault-data = { path = "../vault-data" }
graph-metrics = { path = "../graph-metrics" }
# Property-based correctness oracles for the GPU kernels (closed-form star/path/
# uniform graphs + mass-conservation/convergence invariants). Same version as
# graph-layouts' dev-deps.
proptest = "1"
# Criterion benches run as an `example` (see examples/bench_pagerank.rs), not a
# [[bench]] target, so they survive crane's mkDummySrc deps-only build phase —
# matching the graph-layouts convention.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
# Nix-native graph fixtures: the structured correctness corpus (star/path/cycle/
# complete/grid) is generated by the SHARED graph.nix + graph-combinators.nix
# library via tvix-eval — the same generators the renderer uses — so the test
# graphs and the app graphs cannot drift.
tvix-wasm = { path = "../tvix-wasm" }
