[package]
name = "graph-metrics"
version = "1.0.0"
edition = "2021"
description = "Graph metric computation for VaultGraph (degree, PageRank, betweenness, k-core, WCC, Louvain)"

[dependencies]
vault-data = { path = "../vault-data" }
petgraph   = { workspace = true }
rand       = { workspace = true }
