[package]
name    = "graph-renderer"
version = "0.1.0"
edition = "2021"
description = "Rust + eframe + wgpu frontend for the vault graph viewer (native + WASM via trunk)."

[lib]
name       = "graph_renderer"
crate-type = ["cdylib", "rlib"]
path       = "src/lib.rs"

[[bin]]
name = "graph-renderer"
path = "src/main.rs"

[features]
default = []
wasm    = [
  "dep:console_error_panic_hook",
  "dep:console_log",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
  "dep:web-sys",
]

[dependencies]
eframe   = { version = "0.30", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }
egui     = "0.30"
log      = "0.4"
include_dir = "0.7"

console_error_panic_hook = { version = "0.1", optional = true }
console_log              = { version = "1",  optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen         = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
optional = true
features = [
  "console",
  "Document",
  "Window",
  "Element",
  "HtmlCanvasElement",
  "CssStyleDeclaration",
  "HtmlElement",
]
