[package]
name    = "graph-renderer"
version = "0.1.0"
edition = "2021"
description = "Rust + eframe + wgpu frontend for the vault graph viewer (native + WASM via trunk)."

[lib]
name       = "graph_renderer"
crate-type = ["cdylib", "rlib"]
path       = "src/lib.rs"

[[bin]]
name = "graph-renderer"
path = "src/main.rs"

[features]
default = []
wasm    = [
  "dep:console_error_panic_hook",
  "dep:console_log",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
  "dep:web-sys",
  "dep:gloo-net",
]

[dependencies]
eframe   = { version = "0.30", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11", "persistence", "accesskit"] }
egui     = "0.30"
egui-wgpu = "0.30"
egui_plot = "0.30"
# Markdown rendering for the node-detail modal body. egui_commonmark
# tracks egui's version line — 0.18 is the release built against
# egui 0.30. Default features include pulldown-cmark parsing + syntect
# code-block highlighting; we disable syntect features so we don't
# double-link the syntect crate already in our dep graph.
egui_commonmark = { version = "0.19", default-features = false, features = ["pulldown_cmark"] }
web-time = "1"
log      = "0.4"
include_dir = "0.7"
wgpu     = { version = "23", default-features = false, features = ["webgpu", "webgl", "wgsl"] }
bytemuck = { version = "1", features = ["derive"] }
glam     = "0.29"
graph-layouts = { path = "../graph-layouts" }
jump-io       = { path = "../jump-io" }
prost      = "0.13"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
egui_dock  = { version = "0.15", features = ["serde"] }
fuzzy-matcher = "0.3"
# Syntect with the pure-Rust fancy-regex engine so the same dep tree builds
# on wasm32 (the default `regex-onig` pulls a C library that doesn't ship to
# wasm). `default-themes` keeps a few bundled themes; `default-syntaxes` keeps
# the bundled syntax pack. No `dump-create*` features (we never re-dump caches).
syntect = { version = "5", default-features = false, features = ["parsing", "default-syntaxes", "default-themes", "regex-fancy"] }
# Used for `join_all` when fanning out the bootstrap metric fetches in
# parallel. `default-features = false` keeps tokio out of the dep tree
# (wasm doesn't want it); we only need the futures-util side.
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

console_error_panic_hook = { version = "0.1", optional = true }
console_log              = { version = "1",  optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
reqwest    = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio      = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "net"] }
pollster   = "0.4"
# WS client for the RemoteFa2 layout (native). `connect` feature pulls
# `connect_async` + URL parsing; rustls keeps the build TLS-portable.
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen         = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
gloo-net             = { version = "0.6", features = ["http", "websocket"], optional = true }
gloo-timers          = { version = "0.3", features = ["futures"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
optional = true
features = [
  "console",
  "Document",
  "Window",
  "Location",
  "Element",
  "HtmlCanvasElement",
  "CssStyleDeclaration",
  "HtmlElement",
]

[build-dependencies]
prost-build = "0.13"

# Native-only dev deps. egui_kittest pins to the same egui minor (0.30)
# we already use; it brings in `wgpu` 23 / `image` 0.25 from the existing
# graph already, so no extra transitive cost. Wasm build path doesn't
# pull dev-deps so this stays out of the trunk bundle.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
egui_kittest = "0.30"
